hero section added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,64 @@
 
     <!--*! Header End-->
 
-    <main></main>
+    <main>
+      <!-- TODO add a hero section-->
+      <article>
+        <section class="hero">
+          <div class="hero-text">
+            <h2 class="hero-title">Our Featured Flowers</h2>
+            <p class="hero-description">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+          <div class="hero-pic">
+            <figure class="one">
+              <img
+                src="/FlowerAsset/pngwing 6.png"
+                alt="flowers"
+                class="pic1"
+              />
+            </figure>
+            <figure class="two">
+              <img
+                src="/FlowerAsset/pngwing 5.png"
+                alt="flowers"
+                class="pic2"
+              />
+            </figure>
+            <figure class="three">
+              <img
+                src="/FlowerAsset/pngwing 7.png"
+                alt="flowers"
+                class="pic3"
+              />
+            </figure>
+          </div>
+          <div class="pic-des">
+            <h3 class="oneh3">Pink Flower Tree</h3>
+            <h3>Pink Flower Tree</h3>
+            <h3 class="threeh3">Pink Flower Tree</h3>
+          </div>
+        </section>
+
+        <!--!Delivary-->
+        <section class="delivary">
+          <div>
+            <img src="/FlowerAsset/Group 57.png" alt="Delivary Boy" />
+            <h4>Same Day Delivery. Click & Collect.</h4>
+          </div>
+          <div>
+            <img src="/FlowerAsset/Group 58.png" alt="Flowers" />
+            <h4>Fresh Flowers. Local Growers.</h4>
+          </div>
+          <div>
+            <img src="/FlowerAsset/Group 59.png" alt="Tech Suppport" />
+            <h4>24/7 Free Support.</h4>
+          </div>
+        </section>
+      </article>
+    </main>
     <footer></footer>
   </body>
 </html>
